--- a/css/main.css
+++ b/css/main.css
@@ -333,7 +333,7 @@ li {
 
 #contact-me h2 {
   font-family: "Roboto", sans-serif;
-  font-size: 32px;
+  font-size: 14px;
   font-weight: 700;
   line-height: 44px;
 }
@@ -357,6 +357,8 @@ form textarea {
 form button {
   background-color: #ff6b00;
   padding: 12px;
+  border: none;
+  color: #fff;
 }
 
 .contact-social {
